# REVIA

./: .env.example  .gitignore  Dockerfile  README.md  REVIA_Audit_Report.docx  REVIA_CORE_REVIEW.md  REVIA_Companion_Audit.docx  REVIA_DEEP_DIVE.md  REVIA_Deep_Dive_Audit.docx  REVIA_PRD.docx  config.json  docker-compose.yml  main.py  model_settings.json  profile_settings.json  requirements-optional.txt  requirements-sing.txt  requirements-torch-cu128.txt  requirements.txt  start_revia_controller.bat
.claude/: launch.json
data/: themes.json
docs/: diana_deep_dive.md  phase6_cleanup_boundaries.md
logs/: telemetry_20260309.jsonl
revia_controller_py/: main.py  requirements.txt
revia_core_cpp/: CMakeLists.txt
revia_core_cpp/include/: revia_common.h
revia_core_cpp/src/: main.cpp
revia_core_cpp/src/api/: rest_server.cpp  rest_server.h  ws_server.cpp  ws_server.h
revia_core_cpp/src/core/: ActionDispatcher.cpp  ActionDispatcher.h  ContextManager.cpp  ContextManager.h  ContextRanker.cpp  ContextRanker.h  CoreOrchestrator.cpp  CoreOrchestrator.h  DecisionEngine.cpp  DecisionEngine.h  EventBus.cpp  EventBus.h  FeatureFlags.cpp  FeatureFlags.h  FeedbackManager.cpp  FeedbackManager.h  PriorityResolver.cpp  PriorityResolver.h  README.md  SafetyGateway.cpp  SafetyGateway.h  StateManager.cpp  StateManager.h  StructuredLogger.cpp  StructuredLogger.h  TimingEngine.cpp  TimingEngine.h
revia_core_cpp/src/executors/: DefaultActionExecutors.cpp  DefaultActionExecutors.h
revia_core_cpp/src/feedback/: DefaultLearningSinks.cpp  DefaultLearningSinks.h
revia_core_cpp/src/interfaces/: IAction.h  IActionExecutor.h  IContextProvider.h  IDecisionRule.h  IEvent.h  ILearningSink.h
revia_core_cpp/src/models/: ContextFragment.h  ContextPackage.h  CoreAction.h  DecisionInfluence.h  DecisionResult.h  DelayProfile.h  Enums.h  ExecutionResult.h  FeedbackSignal.h  RuntimeState.h  SafetyProfile.h  SafetyResult.h  ToneProfile.h
revia_core_cpp/src/neural/: EmotionNet.cpp  EmotionNet.h  RouterClassifier.cpp  RouterClassifier.h
revia_core_cpp/src/pipeline/: pipeline.cpp  pipeline.h
revia_core_cpp/src/plugins/: plugin_manager.cpp  plugin_manager.h
revia_core_cpp/src/providers/: DefaultContextProviders.cpp  DefaultContextProviders.h
revia_core_cpp/src/rules/: DefaultDecisionRules.cpp  DefaultDecisionRules.h
revia_core_cpp/src/safety/: DefaultSafetyLayers.cpp  DefaultSafetyLayers.h
revia_core_cpp/src/telemetry/: telemetry.cpp  telemetry.h
revia_core_cpp/src/ui_sync/: BackendSyncService.cpp  BackendSyncService.h
revia_core_py/: answer_validation.py  anti_loop_engine.py  conversation_runtime.py  core_server.py  error_handler.py  human_feel_layer.py  interruption_handler.py  neural_refiner.py  parallel_pipeline.py  persona_manager.py  profile_engine.py  prompt_assembly.py  reflex_responder.py  reinforcement_learner.py  reply_planner.py  requirements.txt  runtime_models.py  runtime_status.py  test_agents.py  test_api.py  test_autonomy_loop.py  test_conversation_runtime.py  test_deep_dive_fixes.py  test_error_handler.py  test_interfaces.py  test_pipeline.py  (+9 more)
(+142 files in other folders)
